NN-2129 Format flag spacing correctly

--- a/src/AlertFlags/AlertFlags.scss
+++ b/src/AlertFlags/AlertFlags.scss
@@ -8,6 +8,7 @@
     font-weight: bold;
     text-align: center;
     display: inline-block;
+    white-space: nowrap;
   }
 
   @media screen {
